--- a/client/.env
+++ b/client/.env
@@ -1,1 +1,3 @@
-VITE_CLERK_PUBLISHABLE_KEY=pk_test_Y29uY3JldGUtY3ViLTcuY2xlcmsuYWNjb3VudHMuZGV2JA
+VITE_CLERK_PUBLISHABLE_KEY=pk_test_c3RhYmxlLWhpcHBvLTAuY2xlcmsuYWNjb3VudHMuZGV2JA
+VITE_BACKEND_URL=http://localhost:3000
+Vite_CURRENCY=$
