--- a/client/package.json
+++ b/client/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "@clerk/clerk-react": "^5.46.2",
     "@tailwindcss/vite": "^4.1.13",
+    "axios": "^1.13.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-router-dom": "^7.8.2",
+    "react-hot-toast": "^2.6.0",
+    "react-router-dom": "^7.9.5",
     "tailwindcss": "^4.1.13"
   },
   "devDependencies": {
