--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,9 @@
-MONGODB_URI = mongodb+srv://FastBook:anishchy69@cluster0.yx2wsj5.mongodb.net
-CLERK_PUBLISHABLE_KEY=pk_test_Y29uY3JldGUtY3ViLTcuY2xlcmsuYWNjb3VudHMuZGV2JA
-CLERK_SECRET_KEY=sk_test_Ii4lngCluHbEtLbmIfQzEV2oOoLOIDHVpTHPxGLpGC
-CLERK_WEBHOOK_SECRET=whsec_6zdG7l4YVM58/UhnLqLsnKbXw5JyyapX
+MONGODB_URI = mongodb+srv://Sudip:P6!TbK3ivmqHivF@rajankodb.bebnhew.mongodb.net/hotel-booking?retryWrites=true&w=majority&appName=RajanKoDB
+
+CLERK_PUBLISHABLE_KEY=pk_test_c3RhYmxlLWhpcHBvLTAuY2xlcmsuYWNjb3VudHMuZGV2JA
+CLERK_SECRET_KEY=sk_test_gY3eUIa170XafIUeP4BRg8SlwP6650zxuTNwMuuZ1p
+CLERK_WEBHOOK_SECRET=whsec_XyJYw6RMMDZNBkHW5DAXWvdV8kYfYGy6
+
+CLOUDINARY_CLOUD_NAME=dkrokzmvp
+CLOUDINARY_API_KEY=	652592639155317
+CLOUDINARY_API_SECRET=2ykBpf6CG_w2W6q2A0v7Jk7E-o8
