--- a/client/.env
+++ b/client/.env
@@ -1,3 +1,3 @@
 VITE_CLERK_PUBLISHABLE_KEY=pk_test_c3RhYmxlLWhpcHBvLTAuY2xlcmsuYWNjb3VudHMuZGV2JA
-VITE_BACKEND_URL=http://localhost:3000
+VITE_BACKEND_URL=https://fastbook-backend.vercel.app
 Vite_CURRENCY=$
